multi_index_map_derive2/tests/ui/accessor_multiple.stderr
error: MultiIndexAccessor requires exactly one #[multi_index(...)] category
 --> tests/ui/accessor_multiple.rs:6:8
  |
6 | struct Multiple;
  |        ^^^^^^^^
